// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VisualizationToggleTest render with a specified label 1`] = `
<DocumentFragment>
  <mock-styledtogglebase
    arialabel="test-label"
    checked="false"
    classname="my test class"
    componentref="[object Object]"
    data-automation-id="test-automation-id"
    disabled="true"
    label="test-label"
    offtext="Off"
    ontext="On"
  />
</DocumentFragment>
`;

exports[`VisualizationToggleTest render with a specified label: StyledToggleBase props 1`] = `
{
  "ariaLabel": "test-label",
  "checked": false,
  "className": "my test class",
  "componentRef": {
    "current": null,
  },
  "data-automation-id": "test-automation-id",
  "disabled": true,
  "label": "test-label",
  "offText": "Off",
  "onBlur": [Function],
  "onClick": [Function],
  "onFocus": [Function],
  "onText": "On",
}
`;

exports[`VisualizationToggleTest render with no label 1`] = `
<DocumentFragment>
  <mock-styledtogglebase
    arialabel="visualizationName"
    checked="false"
    classname="my test class"
    componentref="[object Object]"
    data-automation-id="test-automation-id"
    disabled="true"
    offtext="Off"
    ontext="On"
  />
</DocumentFragment>
`;

exports[`VisualizationToggleTest render with no label: StyledToggleBase props 1`] = `
{
  "ariaLabel": "visualizationName",
  "checked": false,
  "className": "my test class",
  "componentRef": {
    "current": null,
  },
  "data-automation-id": "test-automation-id",
  "disabled": true,
  "label": undefined,
  "offText": "Off",
  "onBlur": [Function],
  "onClick": [Function],
  "onFocus": [Function],
  "onText": "On",
}
`;
